--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
-      - name: Debug: Show first 4 chars of API token (masked)
+      - name: Debug- Show first 4 chars of API token (masked)
         run: echo "CLOUDFLARE_API_TOKEN=${CLOUDFLARE_API_TOKEN:0:4}****"
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
